hphp/hack/test/typecheck/like_types/return.php.exp
File "return.php", line 8, characters 10-17:
Invalid return type (Typing[4110])
File "return.php", line 7, characters 22-25:
Expected dynamic
File "return.php", line 8, characters 10-17:
But got string
File "return.php", line 12, characters 10-28:
Invalid return type (Typing[4110])
File "return.php", line 11, characters 27-29:
Expected int
File "return.php", line 12, characters 22-28:
But got dynamic
File "return.php", line 16, characters 10-19:
Invalid return type (Typing[4110])
File "return.php", line 15, characters 27-29:
Expected int
File "return.php", line 7, characters 22-25:
But got dynamic
